# python-self-driving-simulator

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  aggregation_log.txt  aggregation_log_184249.txt  dashboard.html  debug_dashboard_data.py  debug_obstacles.py  latest_output  mlops.md  mlops0102.md  profile.speedscope.json  profile_dashboard.html  profile_dashboard_template.html  profile_data.json  profile_summary.txt  pyproject.toml
ad_components/control/mppi_controller/: pyproject.toml
ad_components/control/mppi_controller/src/mppi_controller/: mppi.py  mppi_controller_node.py
ad_components/control/mppi_controller/tests/: test_mppi.py
ad_components/control/neural_controller/: pyproject.toml
ad_components/control/neural_controller/src/neural_controller/: __init__.py  controller.py
ad_components/control/pid_controller/: pyproject.toml
ad_components/control/pid_controller/src/pid_controller/: __init__.py  controller.py  pid_controller_node.py
ad_components/control/pid_controller/tests/: test_pid_controller_node.py
ad_components/core/: pyproject.toml
ad_components/core/src/ad_component_core/: __init__.py  flexible_ad_component.py  generic_ad_component.py
ad_components/core/src/ad_component_core/data/: __init__.py
ad_components/core/src/ad_component_core/interfaces/: __init__.py  controller.py  perception.py  planner.py
ad_components/core/src/ad_components_core/: __init__.py
ad_components/core/src/ad_components_core/data/: __init__.py  observation.py
ad_components/core/src/ad_components_core/interfaces/: __init__.py  controller.py  planner.py
ad_components/planning/planning_utils/: pyproject.toml
ad_components/planning/planning_utils/src/planning_utils/: __init__.py  track_loader.py  types.py  visualization.py
ad_components/planning/pure_pursuit/: pyproject.toml
ad_components/planning/pure_pursuit/src/pure_pursuit/: __init__.py  default.param.yaml  planner.py  pure_pursuit_node.py
ad_components/planning/pure_pursuit/tests/: test_pure_pursuit_node.py
component_packages/control/pid/: pyproject.toml
component_packages/control/pid/src/pid/: __init__.py  controller.py
core/: README.md  pyproject.toml
core/src/core/: __init__.py  nodes.py
core/src/core/data/: __init__.py  autoware.py  frame_data.py  node_io.py  result.py  ros.py  sensor.py  simulation_context.py  topic_slot.py
core/src/core/data/ad_components/: __init__.py  action.py  config.py  log.py  sensing.py  stack.py  state.py  trajectory.py
core/src/core/data/environment/: __init__.py  obstacle.py  scene.py
core/src/core/data/experiment/: __init__.py  config.py  result.py  results.py
core/src/core/data/simulation/: __init__.py  (+3 more)
core/src/core/executor/: __init__.py  single_process.py
core/src/core/interfaces/: __init__.py  ad_component.py  ad_components.py  components.py  dashboard.py  experiment.py  experiment_runner.py  node.py  simulator.py  vehicle.py
core/src/core/nodes/: __init__.py  generic_node.py  physics_node.py
core/src/core/utils/: geometry.py  mcap_utils.py  node_factory.py  ros_message_builder.py  validation.py
core/src/core/validation/: node_graph.py
core/src/core/visualization/: obstacle_visualizer.py  vehicle_visualizer.py
core/tests/: test_config.py  test_data.py  test_executor_priority.py  test_interfaces.py  test_mcap_utils.py  test_node_validation.py  test_ros.py  test_transforms.py
dashboard/: README.md  TESTING.md  pyproject.toml
dashboard/frontend/: index.html  package-lock.json  package.json
dashboard/frontend/public/: simulation_log.json
dashboard/frontend/src/: App.tsx  react-plotly.d.ts
dashboard/frontend/src/components/: DashboardLayout.tsx  TimeSeriesPlot.tsx  TrajectoryView.tsx
dashboard/frontend/src/store/: simulationStore.ts
dashboard/frontend/src/types/: index.ts
dashboard/src/dashboard/: __init__.py  generator.py  injector.py  reader.py
dashboard/tests/: .gitignore  dummy_data.py  test_dashboard.sh  test_vehicle_rectangle.py
experiment/runner/: pyproject.toml
experiment/runner/src/experiment_runner/: ad_components.py  cli.py  config.py  executor.py  loader.py  metrics.py  runner.py
experiment/runner/tests/: test_config_loader.py  test_executor.py  test_integration.py  test_training.py
experiment/training/: README.md  pyproject.toml
experiment/training/scripts/: download_mlflow_data.py  generate_function_data.py
experiment/training/src/experiment_training/: function_trainer.py  trainer.py
experiment_runner/: README.md  pyproject.toml
experiment_runner/src/experiment_runner/: runner.py
experiments/pure_pursuit_tracking/: pyproject.toml
experiments/pure_pursuit_tracking/results/: log.json
experiments/pure_pursuit_tracking/src/: run.py  track_loader.py
logger/: pyproject.toml
logger/src/logger/: __init__.py  logger_node.py  ros_message_builder.py  track_loader.py
logger/src/logger/parsers/: __init__.py  lanelet2_parser.py
logger/src/logger/visualization/: __init__.py  map_visualizer.py  obstacle_visualizer.py  path_visualizer.py  trajectory_visualizer.py  vehicle_visualizer.py
simulator/: README.md  pyproject.toml
simulator/benchmarks/: benchmark_lidar.py
simulator/src/simulator/: __init__.py  default.param.yaml  dynamics.py  io.py  map.py  obstacle.py  sensor.py  simulator.py  state.py
simulator/tests/: test_dynamics.py  test_io.py  test_kinematic_simulator.py  test_map.py  test_map_integration.py  test_obstacle.py  test_sensor.py  test_simulator.py  test_state.py
simulators/simulator_dynamic/: README.md  pyproject.toml
simulators/simulator_dynamic/src/simulator_dynamic/: simulator.py  tire_model.py  vehicle.py
simulators/simulator_dynamic/tests/: test_dynamic.py
simulators/simulator_kinematic/: README.md  pyproject.toml
simulators/simulator_kinematic/src/simulator_kinematic/: simulator.py  vehicle.py
simulators/simulator_kinematic/tests/: test_boundary.py  test_kinematic.py
supervisor/: pyproject.toml
supervisor/src/supervisor/: __init__.py  default.param.yaml  supervisor_node.py
supervisor/tests/: test_supervisor_validation.py
(+251 files in other folders)
