[project]
name = "e2e-aichallenge-playground"
version = "0.1.0"
description = "End-to-end AI Challenge Playground"
requires-python = ">=3.12"
dependencies = [
    "experiment",
    "deptry>=0.12.0",
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "lark>=1.0.0",
    "ruff>=0.8.0",
    "pure-pursuit",
    "planning-utils",
    "pid-controller",
    "simulator",
    "core",
    "ad-component-core",
]

[tool.uv]
managed = true

[tool.uv.sources]
experiment = { workspace = true }
core = { workspace = true }
ad-component-core = { workspace = true }
pure-pursuit = { workspace = true }
planning-utils = { workspace = true }
pid-controller = { workspace = true }
simulator = { workspace = true }

[tool.uv.workspace]
members = [
    "core",
    "ad_components/core",
    "ad_components/planning/pure_pursuit",
    "ad_components/planning/planning_utils",
    "ad_components/control/pid_controller",
    "simulator",
    "experiment",
    "experiment/training",
    "dashboard",
    "supervisor",
    "logger",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SLF",    # flake8-self (private member access detection)
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "SIM108", # Use ternary operator (allow if-else for readability)
    "ERA001", # Commented-out code (false positives on Japanese comments)
    "RUF002", # Ambiguous unicode characters (allow fullwidth parentheses in Japanese)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["SLF001"]  # Allow private access in tests
"core/src/core/data/**" = ["ERA001"]  # Allow Japanese section comments

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false # Start lenient
ignore_missing_imports = true

[tool.pytest.ini_options]
# Disable ROS pytest plugins that interfere with standard pytest
addopts = "-p no:launch_testing -p no:launch_testing_ros -p no:launch_testing_ros_pytest_entrypoint"
testpaths = [
    "core/tests",
    "simulator/tests",
    "experiment/tests",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "vulture>=2.14",
    "import-linter>=2.0",
]
