[project]
name = "experiment_runner"
version = "0.1.0"
description = "Unified experiment execution framework"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "mlflow>=2.0.0",
    "boto3>=1.0.0",
    "core",
    "dashboard",
    "simulator_utils",
    "simulator_kinematic",
    "simulator_dynamic",
    "pure-pursuit",
    "pid-controller",
    "planning-utils",
    "neural-controller",
    "visualization",
    "mcap>=1.0.0",
    "mcap-protobuf-support>=0.5.0",
]

[project.optional-dependencies]
neural = ["neural-controller"]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
]

[project.scripts]
experiment-runner = "experiment_runner.cli:main"

[tool.uv.sources]
core = { workspace = true }
dashboard = { workspace = true }
simulator_utils = { workspace = true }
simulator_kinematic = { workspace = true }
simulator_dynamic = { workspace = true }
visualization = { workspace = true }
pure-pursuit = { workspace = true }
pid-controller = { workspace = true }
neural-controller = { workspace = true }
planning-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiment_runner"]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "ANN", "B", "A", "C4",
    "PTH", "RUF",
]
ignore = [
    "ANN101", "ANN102", "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["E501"]  # Allow long lines in tests
"src/**" = ["PTH123", "E501"]  # Allow open() and long lines in src

[tool.ruff.lint.isort]
known-first-party = ["experiment_runner"]

# Pyright configuration
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
