[project]
name = "logger"
version = "0.1.0"
description = "Logging node for recording FrameData during simulation"
requires-python = ">=3.12"
dependencies = [
    "core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logger"]
