[project]
name = "simulator"
version = "0.1.0"
description = "Simulator package"
requires-python = ">=3.12"
dependencies = [
    "core",
    "pydantic>=2.0.0",
    "shapely>=2.1.2",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "numba>=0.63.1",
]

[tool.uv.sources]
core = { workspace = true }

[project.entry-points."e2e_aichallenge.node"]
KinematicSimulator = "simulator.simulator:Simulator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulator"]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "ANN", "B", "A", "C4", "DTZ", "T10", "EXE", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"
]
ignore = [
    "ANN101", "ANN102", "ANN401", "PLR0913", "PLR2004", "PTH123", "RUF002", "TRY003"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/**" = ["ERA001"]  # Allow commented equations for documentation
"tests/**" = ["E501"]  # Allow long lines in tests

[tool.ruff.lint.isort]
known-first-party = ["simulator", "core"]

# Pyright configuration
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[tool.deptry]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP003 = ["simulator"]
DEP002 = ["ruff", "pyright", "pytest"]
