[project]
name = "supervisor"
version = "0.1.0"
description = "Supervision and monitoring node for simulation experiments"
requires-python = ">=3.12"
dependencies = [
    "core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supervisor"]
