[project]
name = "ad-components-core"
version = "0.1.0"
description = "Core interfaces and data types for AD components"
requires-python = ">=3.12"
dependencies = [
    "core",
]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ad_components_core"]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "ANN", "B", "A", "C4",
    "PTH", "RUF",
]
ignore = [
    "ANN101", "ANN102", "ANN401",
]

[tool.ruff.lint.isort]
known-first-party = ["component_core"]

# Pyright configuration
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
