[project]
name = "experiment-training"
version = "0.1.0"
description = "Training logic for E2E AI Challenge Playground"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "mlflow>=2.0.0",
    "core",
    "neural-controller",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiment_training"]

[tool.uv.sources]
core = { workspace = true }
neural-controller = { workspace = true }
