[project]
name = "pure_pursuit_tracking"
version = "0.1.0"
description = "Pure Pursuit tracking experiment"
requires-python = ">=3.12"
dependencies = [
    "core",
    "simulators",
    "components",
    "tools",
    "scipy>=1.10.0",
    "matplotlib>=3.8.0",
    "mlflow>=2.0.0",
    "boto3>=1.28.0",
    "plotly>=5.0.0",
]

[tool.uv.sources]
core = { workspace = true }
simulators = { workspace = true }
components = { workspace = true }
tools = { workspace = true }

[project.scripts]
run_experiment = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "ANN", "B", "A", "C4", "DTZ", "T10", "EXE", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"
]
ignore = [
    "ANN101", "ANN102", "ANN401", "PLR0913", "PLR2004", "PTH123", "RUF002", "TRY003"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Pyright configuration
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
