[project]
name = "simulator_kinematic"
version = "0.1.0"
description = "Kinematic bicycle model simulator"
requires-python = ">=3.12"
dependencies = [
    "core",
    "simulator-core",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
]

[tool.uv.sources]
core = { workspace = true }
simulator_core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulator_kinematic"]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "ANN", "B", "A", "C4", "DTZ", "T10", "EXE", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"
]
ignore = [
    "ANN101", "ANN102", "ANN401", "PLR0913", "PLR2004", "PTH123", "RUF002", "TRY003"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/**" = ["ERA001"]  # Allow commented equations for documentation
"tests/**" = ["E501"]  # Allow long lines in tests

[tool.ruff.lint.isort]
known-first-party = ["simulator_kinematic", "simulator_core", "core"]

# Pyright configuration
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[tool.deptry]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP003 = ["simulator_kinematic"]
DEP002 = ["ruff", "pyright", "pytest", "simulator-core"]
