[project]
name = "mppi-controller"
version = "0.1.0"
description = "MPPI Controller component"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "numpy",
    "pydantic",
    "scipy",
    "numba",
    "planning-utils",
    "simulator",
]

[project.entry-points."e2e_aichallenge.node"]
MPPIControllerNode = "mppi_controller.mppi_controller_node:MPPIControllerNode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mppi_controller"]

[tool.uv.sources]
core = { workspace = true }
planning-utils = { workspace = true }
simulator = { workspace = true }
