[project]
name = "pid-controller"
version = "0.1.0"
description = "PID controller"
requires-python = ">=3.12"
dependencies = [
    "core",
    "ad-component-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pid_controller"]

[tool.uv.sources]
core = { workspace = true }
ad-component-core = { workspace = true }

[tool.deptry]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP003 = ["pid_controller"]
