[project]
name = "planning-utils"
version = "0.1.0"
description = "Planning utilities"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planning_utils"]

[tool.uv.sources]
core = { workspace = true }
