[project]
name = "planning-utils"
version = "0.1.0"
description = "Planning utilities"
requires-python = ">=3.12"
dependencies = [
    "core",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "scipy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planning_utils"]

[tool.uv.sources]
core = { workspace = true }

[tool.deptry]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP003 = ["planning_utils"]
