[project]
name = "pure-pursuit"
version = "0.1.0"
description = "Pure Pursuit path tracking algorithm"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "core",
    "ad-components-core",
    "planning-utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pure_pursuit"]

[tool.uv.sources]
core = { workspace = true }
ad-components-core = { workspace = true }
planning-utils = { workspace = true }
