[project]
name = "pure-pursuit"
version = "0.1.0"
description = "Pure Pursuit path tracking algorithm"
requires-python = ">=3.12"
dependencies = [
    "core",
    "pydantic",
    "planning-utils",
]


[project.entry-points."ad_components"]
"PurePursuitPlanner" = "pure_pursuit:PurePursuitPlanner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pure_pursuit"]

[tool.uv.sources]
core = { workspace = true }
ad-component-core = { workspace = true }
planning-utils = { workspace = true }

[tool.deptry]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP003 = ["pure_pursuit"]
