[project]
name = "pid-controller"
version = "0.1.0"
description = "PID controller"
requires-python = ">=3.12"
dependencies = [
    "core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pid"]

[tool.uv.sources]
core = { workspace = true }
